--- a/layout/app.index.html
+++ b/layout/app.index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="keywords" content="<?= htmlentities ($CFG ['KEYWORDS'][$LANG]) ?>">
 <meta name="description" content="<?= htmlentities ($CFG ['DESCRIPTION'][$LANG]) ?>">
-<script defer src="../js/august.app-loader.js?<?= VERSION  ?>#<?= $APP ?>:<?= $APP_VERSION ?>:<?= $LANG ?>"></script>
+<script defer src="../js/august.app-loader.js?<?= VERSION  ?>#<?= $APP ?>:<?= $LANG ?>"></script>
 <script src="../js/august.js?<?= VERSION  ?>"></script>
 <link rel="manifest" href="manifest.json">
 </head>
